--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <nav class="header">
     <div class="logo">
       <img src="../../../assets/logo.png" alt="">
-      <h2>VILCHE<span class="danger">ZTORE</span></h2>
+      <h2>VILCHE<span class="danger">&nbsp;ZTORE</span></h2>
       <div class="buton-toggle" (click)="sideNavToggle()">
         <mat-icon>menu</mat-icon>
       </div>
