--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -4,8 +4,8 @@
     <!-- todo: Data table with sorting, pagination, and filtering. -->
     <div class="table-controls">
         <mat-form-field>
-            <mat-label>Filter</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+            <mat-label>Buscar</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
         </mat-form-field>
         <button class="btn-add">
             Agregar Producto
@@ -14,28 +14,49 @@
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
       
-          <!-- ID Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-          </ng-container>
-      
-          <!-- Progress Column -->
-          <ng-container matColumnDef="progress">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-            <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
-          </ng-container>
+          
       
           <!-- Name Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
             <td mat-cell *matCellDef="let row"> {{row.name}} </td>
           </ng-container>
       
-          <!-- Fruit Column -->
-          <ng-container matColumnDef="fruit">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-            <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+          <!-- description Column -->
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+            <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+          </ng-container>
+      
+          <!-- category Column -->
+          <ng-container matColumnDef="category">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoria </th>
+            <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+          </ng-container>
+
+          
+          <!-- measure Column -->
+          <ng-container matColumnDef="measure">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Medida </th>
+            <td mat-cell *matCellDef="let row"> {{row.measure}} </td>
+          </ng-container>
+      
+          <!-- PrecioCompra Column -->
+          <ng-container matColumnDef="priceBuy">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> PrecioCompra </th>
+            <td mat-cell *matCellDef="let row"> S/.{{row.priceBuy | number:'1.2-2'}} </td>
+          </ng-container>
+      
+          <!-- PriceSale Column -->
+          <ng-container matColumnDef="priceSale">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> PrecioVenta </th>
+            <td mat-cell *matCellDef="let row"> S/.{{row.priceSale | number:'1.2-2'}} </td>
+          </ng-container>
+      
+          <!-- Stock Column -->
+          <ng-container matColumnDef="stock">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Stock </th>
+            <td mat-cell *matCellDef="let row"> {{row.stock}} </td>
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
