--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -2,8 +2,8 @@
     <h1>Ventas</h1>
     <div class="sales-controls">
         <mat-form-field>
-            <mat-label>Filter</mat-label>
-            <input matInput placeholder="Ex. Mia" #input>
+            <mat-label>Buscar</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
         </mat-form-field>
         <div class="controls">
             <mat-form-field >
@@ -16,36 +16,51 @@
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
             </mat-form-field>
-            <button>Nueva venta</button>
+            <button>Nueva venta</button> 
         </div>
     </div>
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort>
-      
-          <!-- ID Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+          <!-- nameClient Column -->
+          <ng-container matColumnDef="clientName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre Cliente </th>
+            <td mat-cell *matCellDef="let row"> {{row.clientName}} </td>
           </ng-container>
       
-          <!-- Progress Column -->
-          <ng-container matColumnDef="progress">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-            <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
+          <!-- dateSale Column -->
+          <ng-container matColumnDef="dateSale">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de venta </th>
+            <td mat-cell *matCellDef="let row"> {{row.dateSale | date:"dd-MM-yyyy, h:mm a"}} </td>
           </ng-container>
       
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+          <!-- totalPrice Column -->
+          <ng-container matColumnDef="totalPrice">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Precio Total </th>
+            <td mat-cell *matCellDef="let row"> S/.{{row.totalPrice | number:'1.2-2'}} </td>
           </ng-container>
       
-          <!-- Fruit Column -->
-          <ng-container matColumnDef="fruit">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-            <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+          <!-- products Column -->
+          <ng-container matColumnDef="products">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Productos</th>
+            <!-- <td mat-cell *matCellDef="let row"> {{row.products}} </td> -->
+            <td mat-cell *matCellDef="let row"> 
+              <!-- <ng-container *ngIf="row.products && row.products.length > 0">
+                <ul>
+                  <li *ngFor="let product of row.products">{{product.productoId}}</li>
+                </ul>
+              </ng-container> -->
+              <ng-container *ngFor="let product of row.products; index as i;">
+               {{ product.productName | titlecase }}.
+              </ng-container>
+            </td>
           </ng-container>
-      
+
+          <!-- state Column -->
+          <ng-container matColumnDef="state">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado</th>
+            <td mat-cell *matCellDef="let row"> {{row.state}} </td>
+          </ng-container>
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
