--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
             </div>
-            <small class="text-muted">ultimos 30 días</small>
+            <small class="text-muted">total de productos en inventario</small>
         </div>
         <div class="sales">
             <span>
