--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -36,3 +36,17 @@
 // td, th {
 //     width: 25%;
 //   }
+
+.btn-actions {
+    display: flex;
+    
+}
+.btn-actions button {
+    border: none;
+    outline: none;
+    background-color: #fff;
+}
+.btn-actions mat-icon {
+    color: #7d8da1;;
+    // color: #7380ec;
+}
