--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -59,6 +59,20 @@
             <td mat-cell *matCellDef="let row"> {{row.stock}} </td>
           </ng-container>
       
+          <!-- actions Column -->
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+            <td mat-cell *matCellDef="let row">
+              <div class="btn-actions">
+                <button><mat-icon fontIcon="edit"></mat-icon></button>
+                <button><mat-icon fontIcon="delete" (click)="openDeleteModal(row.id)"></mat-icon></button>
+                
+                
+                
+              </div>
+            </td>
+          </ng-container>
+      
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       
