--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -64,7 +64,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
             <td mat-cell *matCellDef="let row">
               <div class="btn-actions">
-                <button><mat-icon fontIcon="edit"></mat-icon></button>
+                <button><mat-icon fontIcon="edit" (click)="openDialogUpdate(row)"></mat-icon></button>
                 <button><mat-icon fontIcon="delete" (click)="openDeleteModal(row.id)"></mat-icon></button>
                 
                 
