--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -6,17 +6,17 @@
             <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
         </mat-form-field>
         <div class="controls">
-            <mat-form-field >
+            <!-- <mat-form-field >
                 <mat-label>Ingrese un rango de fechas:</mat-label>
                 <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
                     <input matStartDate formControlName="start" placeholder="Start date">
                     <input matEndDate formControlName="end" placeholder="End date">
                 </mat-date-range-input>
-                <!-- <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint> -->
+                <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-date-range-picker #picker></mat-date-range-picker>
-            </mat-form-field>
-            <button>Nueva venta</button> 
+            </mat-form-field> -->
+            <button class="btn-add" (click)="openDialogCreate()">Nueva venta</button> 
         </div>
     </div>
     <div class="mat-elevation-z8">
@@ -56,9 +56,20 @@
           </ng-container>
 
           <!-- state Column -->
-          <ng-container matColumnDef="state">
+          <!-- <ng-container matColumnDef="state">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado</th>
             <td mat-cell *matCellDef="let row"> {{row.state}} </td>
+          </ng-container> -->
+
+          <!-- actions Column -->
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones</th>
+            <td mat-cell *matCellDef="let row">
+              <div class="btn-actions">
+                <button><mat-icon fontIcon="edit" (click)="openDialogUpdate(row)"></mat-icon></button>
+                <button><mat-icon fontIcon="delete" (click)="openDeleteModal(row.id)"></mat-icon></button>
+              </div>
+            </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
