--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -79,9 +79,9 @@
                       The actual rendered columns are set as a property on the row definition" -->
               
                 <!-- Position Column -->
-                <ng-container matColumnDef="productoId">
-                  <th mat-header-cell *matHeaderCellDef> ID </th>
-                  <td mat-cell *matCellDef="let element"> {{element.productoId}} </td>
+                <ng-container matColumnDef="index">
+                  <th mat-header-cell *matHeaderCellDef> N° </th>
+                  <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
                 </ng-container>
               
                 <!-- Name Column -->
